@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/debhelper
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/debhelper/ChangeLog,v 1.110 2014/10/04 07:07:24 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/debhelper/ChangeLog,v 1.111 2014/10/11 12:50:58 jer Exp $
+
+*debhelper-9.20141010 (11 Oct 2014)
+
+  11 Oct 2014; Jeroen Roovers <jer@gentoo.org> +debhelper-9.20141010.ebuild:
+  Version bump.
 
 *debhelper-9.20141003 (04 Oct 2014)
 
